Bootstrap-Framework hinzugefügt

--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <html>
-    <head>
-        <title>Gradcalc - Abinotenberechnung für jedermann!</title>
-    </head>
-    <body>
-        <h1>Wir arbeiten dran.</h1>
-    </body>
+
+<head>
+    <title>Gradcalc - Abinotenberechnung für jedermann!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar">
+        <a class="navbar-brand" href="#"><img src="./gradcalc-logo.png" style="width: 70px;"></a>
+        <ul class="nav nav-pills" role="tablist">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
+    </div>
+    </nav>
+</body>
+
 </html>
