--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <nav class="navbar">
-        <a class="navbar-brand" href="#"><img src="./gradcalc-logo.png" style="width: 70px;"></a>
-        <ul class="nav nav-pills" role="tablist">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-            <li><a href="#">About</a></li>
+        <a class="navbar-brand" href="#"><img src="./gradcalc-logo.png" style="width: 50px;"></a>
+        <ul class="nav nav-pills headlist" role="tablist">
+            <li class="active"><a href="./index.html">Rechner</a></li>
+            <li><a href="./informationen.htm">Informationen</a></li>
         </ul>
     </div>
     </nav>
+
+    <div class="container headcontainer">
+        <p id="headtext">Mit <span class="bold">Gradcalc</span> kannst du <span class="bold">in nur X Schritten</span>
+            deine voraussichtliche Abiturnote berechnen
+            und dir somit <span class="bold">mehr Klarheit</span> über deinen
+            schulischen Stand verschaffen!</p>
+    </div>
 </body>
 
 </html>
