Anfang der Tabellenintegration Tabelle erstellt von Till

--- a/index.html
+++ b/index.html
@@ -27,6 +27,244 @@
             und dir somit <span class="bold">mehr Klarheit</span> über deinen
             schulischen Stand verschaffen!</p>
     </div>
+
+    <div class="container" id="calculator">
+    <table border= "r">
+        <tr>
+          <td>Fächer</td>
+          <td>Leistungskurs</td>
+          <td>Grundkurs</td>
+          <td>1.Hj</td>
+          <td>2.Hj</td>
+          <td>3.Hj</td>
+          <td>4.Hj</td>
+          <td>Punkte insgesamt</td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach1" id="fach1"></td>
+         <td><input type="radio" name="fach1lkgk" value="fach1lkgk"></td>
+         <td><input type="radio" name="fach1lkgk" value="fach1gk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach2" id="fach2"></td>
+         <td><input type="radio" name="fach2lkgk" value="fach2lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach3" id="fach3"></td>
+         <td><input type="radio" name="fach3lkgk" value="fach3lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach4" id="fach4"></td>
+         <td><input type="radio" name="fach4lkgk" value="fach4lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach5" id="fach5"></td>
+         <td><input type="radio" name="fach5lkgk" value="fach5lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach6" id="fach6"></td>
+         <td><input type="radio" name="fach6lkgk" value="fach6lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach7" id="fach7"></td>
+         <td><input type="radio" name="fach7lkgk" value="fach7lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach8" id="fach8"></td>
+         <td><input type="radio" name="fach8lkgk" value="fach8lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach9" id="fach9"></td>
+         <td><input type="radio" name="fach9lkgk" value="fach9lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach10" id="fach10"></td>
+         <td><input type="radio" name="fach10lkgk" value="fach10lkgk"></td>
+       </tr>
+       <tr>
+         <td><input type="text" name="fach11" id="fach11"></td>
+         <td><input type="radio" name="fach11lkgk" value="fach11lkgk"></td>
+       </tr>
+     </table>
+     <table border= "r">
+       <tr>
+         <td>Prüfungsfächer</td>
+         <td>Punkte insgesamt</td>
+       </tr>
+       <tr>
+         <td></td>
+       </tr>
+     </table>
+     <table border= "r">
+       <tr>
+         <td>1. Note zum Streichen</td>
+         <td>2. Note zum Streichen</td>
+       </tr>
+       <tr>
+           <td>Note 1</td>
+           <td>Note 2</td>
+       </tr>
+       <tr>
+         <td></td>
+         <td></td>
+       </tr>
+     </table>
+     <table border= "r">
+       <tr>
+         <td></td>
+         <td>Punkte</td>
+       </tr>
+       <tr>
+         <td></td>
+         <td></td>
+       </tr>
+       <tr>
+         <td>Summe A</td>
+       </tr>
+       <tr>
+         <td>Summe B</td>
+       </tr>
+       <tr>
+         <td>Punkte</td>
+       </tr>
+       <tr>
+         <td>Abipunkte</td>
+       </tr>
+       <tr>
+         <td>Gesamtpunkte</td>
+       </tr>
+     </table>
+     <!--<table border= "r">
+       <tr>
+         <td>Punkte</td>
+         <td>Durchschnitt</td>
+       </tr>
+       <tr>
+         <td>900-823</td>
+         <td>1,0</td>
+       </tr>
+       <tr>
+         <td>822-805</td>
+         <td>1,1</td>
+       </tr>
+       <tr>
+         <td>804-787</td>
+         <td>1,2</td>
+       </tr>
+       <tr>
+         <td>786-769</td>
+         <td>1,3</td>
+       </tr>
+       <tr>
+         <td>768-751</td>
+         <td>1,4</td>
+       </tr>
+       <tr>
+         <td>750-733</td>
+         <td>1,5</td>
+       </tr>
+       <tr>
+         <td>732-715</td>
+         <td>1,6</td>
+       </tr>
+       <tr>
+         <td>714-697</td>
+         <td>1,7</td>
+       </tr>
+       <tr>
+         <td>696-679</td>
+         <td>1,8</td>
+       </tr>
+       <tr>
+         <td>678-661</td>
+         <td>1,9</td>
+       </tr>
+       <tr>
+         <td>660-643</td>
+         <td>2,0</td>
+       </tr>
+       <tr>
+         <td>642-625</td>
+         <td>2,1</td>
+       </tr>
+       <tr>
+         <td>624-607</td>
+         <td>2,2</td>
+       </tr>
+       <tr>
+         <td>606-589</td>
+         <td>2,3</td>
+       </tr>
+       <tr>
+         <td>588-571</td>
+         <td>2,4</td>
+       </tr>
+       <tr>
+         <td>570-553</td>
+         <td>2,5</td>
+       </tr>
+       <tr>
+         <td>552-535</td>
+         <td>2,6</td>
+       </tr>
+       <tr>
+         <td>534-517</td>
+         <td>2,7</td>
+       </tr>
+       <tr>
+         <td>516-499</td>
+         <td>2,8</td>
+       </tr>
+       <tr>
+         <td>498-481</td>
+         <td>2,9</td>
+       </tr>
+       <tr>
+         <td>480-463</td>
+         <td>3,0</td>
+       </tr>
+       <tr>
+         <td>462-445</td>
+         <td>3,1</td>
+       </tr>
+       <tr>
+         <td>444-427</td>
+         <td>3,2</td>
+       </tr>
+       <tr>
+         <td>426-409</td>
+         <td>3,3</td>
+       </tr>
+       <tr>
+         <td>408-391</td>
+         <td>3,4</td>
+       </tr>
+       <tr>
+         <td>390-373</td>
+         <td>3,5</td>
+       </tr>
+       <tr>
+         <td>372-355</td>
+         <td>3,6</td>
+       </tr>
+       <tr>
+         <td>354-337</td>
+         <td>3,7</td>
+       </tr>
+       <tr>
+         <td>336-319</td>
+         <td>3,8</td>
+       </tr>
+       <tr>
+         <td>318-301</td>
+         <td>3,9</td>
+       </tr>
+       <tr>
+         <td>300</td>
+         <td>4,0</td>
+       </tr>
+     </table>-->
+    </div>
 </body>
 
 </html>
