--- a/index.html
+++ b/index.html
@@ -22,121 +22,121 @@
     </nav>
 
     <div class="container headcontainer">
-        <p id="headtext">Mit <span class="bold">Gradcalc</span> kannst du <span class="bold">in nur X Schritten</span>
-            deine voraussichtliche Abiturnote berechnen
+        <p id="headtext">Mit <span class="bold">Gradcalc</span> kannst du <span class="bold">in nur wenigen Schritten</span>
+            deine voraussichtliche Abiturnote in Brandenburg berechnen
             und dir somit <span class="bold">mehr Klarheit</span> über deinen
             schulischen Stand verschaffen!</p>
     </div>
 
-    <div class="container" id="mid">
+    <div class="container input-group input-group-md" id="mid">
     <table border= "r">
         <tr>
           <td>Fächer</td>
-          <td>Leistungskurs</td>
-          <td>Grundkurs</td>
-          <td>1.Hj</td>
-          <td>2.Hj</td>
-          <td>3.Hj</td>
-          <td>4.Hj</td>
+          <td id="lkc"><span>Leistungskurs</span></td>
+          <td id="gkc"><span>Grundkurs</span></td>
+          <td class="innumber">1.Hj</td>
+          <td class="innumber">2.Hj</td>
+          <td class="innumber">3.Hj</td>
+          <td class="innumber">4.Hj</td>
        </tr>
        <tr>
-         <td><input type="text" name="fach1" id="fach1" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach1" id="fach1" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach1lkgk" value="fach1lk"></td>
          <td><input type="radio" name="fach1lkgk" value="fach1gk"></td>
-         <td><input type="number" name="fach1hj1" min="0" max=15></td>
-         <td><input type="number" name="fach1hj2" min="0" max=15></td>
-         <td><input type="number" name="fach1hj3" min="0" max=15></td>
-         <td><input type="number" name="fach1hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach1hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach1hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach1hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach1hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach2" id="fach2" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach2" id="fach2" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach2lkgk" value="fach2lk"></td>
          <td><input type="radio" name="fach2lkgk" value="fach2gk"></td>
-         <td><input type="number" name="fach2hj1" min="0" max=15></td>
-         <td><input type="number" name="fach2hj2" min="0" max=15></td>
-         <td><input type="number" name="fach2hj3" min="0" max=15></td>
-         <td><input type="number" name="fach2hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach2hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach2hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach2hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach2hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach3" id="fach3" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach3" id="fach3" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach3lkgk" value="fach3lk"></td>
          <td><input type="radio" name="fach3lkgk" value="fach3gk"></td>
-         <td><input type="number" name="fach3hj1" min="0" max=15></td>
-         <td><input type="number" name="fach3hj2" min="0" max=15></td>
-         <td><input type="number" name="fach3hj3" min="0" max=15></td>
-         <td><input type="number" name="fach3hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach3hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach3hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach3hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach3hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach4" id="fach4" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach4" id="fach4" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach4lkgk" value="fach4lk"></td>
          <td><input type="radio" name="fach4lkgk" value="fach4gk"></td>
-         <td><input type="number" name="fach4hj1" min="0" max=15></td>
-         <td><input type="number" name="fach4hj2" min="0" max=15></td>
-         <td><input type="number" name="fach4hj3" min="0" max=15></td>
-         <td><input type="number" name="fach4hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach4hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach4hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach4hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach4hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach5" id="fach5" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach5" id="fach5" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach5lkgk" value="fach5lk"></td>
          <td><input type="radio" name="fach5lkgk" value="fach5gk"></td>
-         <td><input type="number" name="fach5hj1" min="0" max=15></td>
-         <td><input type="number" name="fach5hj2" min="0" max=15></td>
-         <td><input type="number" name="fach5hj3" min="0" max=15></td>
-         <td><input type="number" name="fach5hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach5hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach5hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach5hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach5hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach6" id="fach6" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach6" id="fach6" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach6lkgk" value="fach6lk"></td>
          <td><input type="radio" name="fach6lkgk" value="fach6gk"></td>
-         <td><input type="number" name="fach6hj1" min="0" max=15></td>
-         <td><input type="number" name="fach6hj2" min="0" max=15></td>
-         <td><input type="number" name="fach6hj3" min="0" max=15></td>
-         <td><input type="number" name="fach6hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach6hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach6hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach6hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach6hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach7" id="fach7"  value="Fach eingeben..."></td>
+         <td><input type="text" name="fach7" id="fach7" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach7lkgk" value="fach7lk"></td>
          <td><input type="radio" name="fach7lkgk" value="fach7gk"></td>
-         <td><input type="number" name="fach7hj1" min="0" max=15></td>
-         <td><input type="number" name="fach7hj2" min="0" max=15></td>
-         <td><input type="number" name="fach7hj3" min="0" max=15></td>
-         <td><input type="number" name="fach7hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach7hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach7hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach7hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach7hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach8" id="fach8" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach8" id="fach8" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach8lkgk" value="fach8lk"></td>
          <td><input type="radio" name="fach8lkgk" value="fach8gk"></td>
-         <td><input type="number" name="fach8hj1" min="0" max=15></td>
-         <td><input type="number" name="fach8hj2" min="0" max=15></td>
-         <td><input type="number" name="fach8hj3" min="0" max=15></td>
-         <td><input type="number" name="fach8hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach8hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach8hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach8hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach8hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach9" id="fach9" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach9" id="fach9" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach9lkgk" value="fach9lk"></td>
          <td><input type="radio" name="fach9lkgk" value="fach9gk"></td>
-         <td><input type="number" name="fach9hj1" min="0" max=15></td>
-         <td><input type="number" name="fach9hj2" min="0" max=15></td>
-         <td><input type="number" name="fach9hj3" min="0" max=15></td>
-         <td><input type="number" name="fach9hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach9hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach9hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach9hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach9hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach10" id="fach10" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach10" id="fach10" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach10lkgk" value="fach10lk"></td>
          <td><input type="radio" name="fach10lkgk" value="fach10gk"></td>
-         <td><input type="number" name="fach10hj1" min="0" max=15></td>
-         <td><input type="number" name="fach10hj2" min="0" max=15></td>
-         <td><input type="number" name="fach10hj3" min="0" max=15></td>
-         <td><input type="number" name="fach10hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach10hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach10hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach10hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach10hj4" min="0" max=15></td>
        </tr>
        <tr>
-         <td><input type="text" name="fach11" id="fach11" value="Fach eingeben..."></td>
+         <td><input type="text" name="fach11" id="fach11" placeholder="Fach eingeben..."></td>
          <td><input type="radio" name="fach11lkgk" value="fach11lk"></td>
          <td><input type="radio" name="fach11lkgk" value="fach11gk"></td>
-         <td><input type="number" name="fach11hj1" min="0" max=15></td>
-         <td><input type="number" name="fach11hj2" min="0" max=15></td>
-         <td><input type="number" name="fach11hj3" min="0" max=15></td>
-         <td><input type="number" name="fach11hj4" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach11hj1" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach11hj2" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach11hj3" min="0" max=15></td>
+         <td class="innumber"><input type="number" name="fach11hj4" min="0" max=15></td>
        </tr>
      </table>
     </div>
