--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     </div>
 
     <div class="container input-group input-group-md" id="mid">
-    <table border= "r">
+    <table>
         <tr>
-          <td>Fächer</td>
-          <td id="lkc"><span>Leistungskurs</span></td>
-          <td id="gkc"><span>Grundkurs</span></td>
-          <td class="innumber">1.Hj</td>
-          <td class="innumber">2.Hj</td>
-          <td class="innumber">3.Hj</td>
-          <td class="innumber">4.Hj</td>
+          <th>Fächer</td>
+          <th id="lkc"><span>Leistungskurs</span></td>
+          <th id="gkc"><span>Grundkurs</span></td>
+          <th class="innumber">1.Hj</td>
+          <th class="innumber">2.Hj</td>
+          <th class="innumber">3.Hj</td>
+          <th class="innumber">4.Hj</td>
        </tr>
        <tr>
          <td><input type="text" name="fach1" id="fach1" placeholder="Fach eingeben..."></td>
