Co-authored-by: Sinon21 <tillflorin@icloud.com> Co-authored-by: dine20 <undine.reichel@web.de>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <ul class="nav nav-pills headlist" role="tablist">
             <li class="active"><a href="./index.html">Rechner</a></li>
             <li><a href="./informationen.htm">Informationen</a></li>
+            <li><a href="./impressum.htm">Impressum</a></li>
+            <li><a href="./datenschutz.htm">Datenschutzerklärung</a></li>
         </ul>
     </div>    
     </nav>
