--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
         gesamtpunkte = Math.floor(gesamtpunkte);
         document.getElementById("gesamtpunkte").innerHTML = gesamtpunkte;
 
+
+        //Skript zum Zusammenfassen aller Halbjahresnoten in einem Array
         var alle = [];
         var f;
         var tmpstr;
@@ -299,7 +301,8 @@
             alle.push(document.getElementsByName(tmpstr)[0].value);
           }
         }
-        document.getElementById("testfeld").innerHTML = alle;
+        //document.getElementById("testfeld").innerHTML = alle;
+        //Ende dieses Skriptes
 
         var abiturnote;
         switch (gesamtpunkte) {
