--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
         var a7hj3 = parseInt(document.getElementsByName("fach11hj3")[0].value);
         var a7hj4 = parseInt(document.getElementsByName("fach11hj4")[0].value);
         var a7 = a7hj1 + a7hj2 + a7hj3 + a7hj4;
-        var summeb = p4 + a1 + a2+ a3 + a4 + a5 + a6 + a7
+        var s1 = parseInt(document.getElementById("streich1")[0].value);
+        var s2 = parseInt(document.getElementById("streich2")[0].value);
+        var summeb = p4 + a1 + a2+ a3 + a4 + a5 + a6 + a7 - s1 - s2
 
         //Skript die Punkte, die in der Qualifikationsphase erreicht werden
         var punkte = ((summea*2 + summeb)/54)*40
