--- a/datenschutz.htm
+++ b/datenschutz.htm
@@ -1,23 +1,30 @@
 <html>
-
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
 
 
 <body>
     <div>
         <nav class="navbar">
-        <a class="navbar-brand" href="#"><img src="./gradcalc-logo.png" style="width: 50px;"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./gradcalc-logo.png" style="width: 50px;"></a>
         <ul class="nav nav-pills headlist" role="tablist">
-            <li class="active"><a href="./index.html">Rechner</a></li>
-            <li><a href="./informationen.htm">Informationen</a></li>
+            <li><a href="./index.html">Rechner</a></li>
             <li><a href="./impressum.htm">Impressum</a></li>
-            <li><a href="./datenschutz.htm">Datenschutzerklärung</a></li>
+            <li class="active"><a href="./datenschutz.htm">Datenschutzerklärung</a></li>
         </ul>
     </div>    
     </nav>
-<p>Datenschutzerklärung
+    <div class="formatted">
+<p><h1 class="bold">Datenschutzerklärung</h1>
     <br>
     <br>
-    Einleitung
+    <h2>Einleitung</h2>
     <br>
     <br>
     Mit der folgenden Datenschutzerklärung möchten wir Sie darüber aufklären, welche Arten Ihrer personenbezogenen Daten (nachfolgend auch kurz als "Daten“ bezeichnet) wir zu welchen Zwecken und in welchem Umfang verarbeiten. Die Datenschutzerklärung gilt für alle von uns durchgeführten Verarbeitungen personenbezogener Daten, sowohl im Rahmen der Erbringung unserer Leistungen als auch insbesondere auf unseren Webseiten, in mobilen Applikationen sowie innerhalb externer Onlinepräsenzen, wie z.B. unserer Social-Media-Profile (nachfolgend zusammenfassend bezeichnet als "Onlineangebot“).
@@ -29,7 +36,7 @@
     Stand: 16. März 2020
     <br>
     <br>
-    Inhaltsübersicht
+    <h2>Inhaltsübersicht</h2>
     <br>
     <br>
     Einleitung
@@ -355,4 +362,6 @@
   <a href="http://www.datenschutzgenerator.de">Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas Schwenke</a>
 
 </p>
+</div>
     </body>
+</html>
