--- a/impressum.htm
+++ b/impressum.htm
@@ -1,18 +1,26 @@
 <html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    </head>
 <body>
     <div>
         <nav class="navbar">
-        <a class="navbar-brand" href="#"><img src="./gradcalc-logo.png" style="width: 50px;"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./gradcalc-logo.png" style="width: 50px;"></a>
         <ul class="nav nav-pills headlist" role="tablist">
-            <li class="active"><a href="./index.html">Rechner</a></li>
-            <li><a href="./informationen.htm">Informationen</a></li>
-            <li><a href="./impressum.htm">Impressum</a></li>
+            <li><a href="./index.html">Rechner</a></li>
+            <li class="active"><a href="./impressum.htm">Impressum</a></li>
             <li><a href="./datenschutz.htm">Datenschutzerklärung</a></li>
         </ul>
     </div>    
     </nav>
+    <div class="formatted">
 <p>
-    <h2>Impressum</h2>
+    <h2 class="bold">Impressum</h2>
     <p>Florian Weber<br />
     Fasanenbogen 37<br />14776 Brandenburg an der Havel</p>
     <p>Telefon: +4915238242893<br />
@@ -33,3 +41,6 @@
     § 4 Besondere Nutzungsbedingungen<br />
     Soweit besondere Bedingungen für einzelne Nutzungen dieser Website von den vorgenannten Paragraphen abweichen, wird an entsprechender Stelle ausdrücklich darauf hingewiesen. In diesem Falle gelten im jeweiligen Einzelfall die besonderen Nutzungsbedingungen.<p>Quelle: <a href="https://www.juraforum.de/impressum-generator/">Impressum Vorlage von JuraForum.de</a></p>
 </p>
+</div>
+</body>
+</html>
